--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <title>Ahi's Personal Site</title>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="image/favicon.ico" type="images/x-icon">
+  <!--link rel="icon" href="image/favicon.ico" type="images/x-icon"-->
 </head>
 
 <body>
   <table cellspacing="20">
     <tbody>
-      <td><img src="img.jpg" alt="" height="200px" width="200px"></td>
+      <td><img src="img1.jpg" alt="" height="200px" width="200px"></td>
       <td>
         <h1>Ahi Bhushan Mahto</h1>
         <p>An <em>Undergraduate</em> Student.</p>
