--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing="20">
     <tbody>
-      <td><img src="img1.jpg" alt="" height="200px" width="200px"></td>
+      <td><img src="img.png" alt="" height="200px" width="200px"></td>
       <td>
         <h1>Ahi Bhushan Mahto</h1>
         <p>An <em>Undergraduate</em> Student.</p>
