--- a/index.html
+++ b/index.html
@@ -1,101 +1,63 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
 
 <head>
-  <meta charset="utf-8">
-  <title>Ahi's Personal Site</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <!--link rel="icon" href="image/favicon.ico" type="images/x-icon"-->
+    <meta charset="UTF-8">
+    <title>Dattebayo!</title>
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tbody>
-      <td><img src="img.png" alt="" height="200px" width="200px"></td>
-      <td>
-        <h1>Ahi Bhushan Mahto</h1>
-        <p>An <em>Undergraduate</em> Student.</p>
-        <p>Geek Frontend Web Developer.</p>
-        <p>Jack of all trades,master of none.</p>
-      </td>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Hobbies</h3>
-  <ul>
-    <li>
-      <p>Coding.</p>
-    </li>
-    <li>
-      <p>Love Watching Animes.</p>
-    </li>
-    <li>
-      <p>Listen Lo-Fi Songs and Anime OST's ❣ ❣</p>
-    </li>
-  </ul>
+    <table>
+        <tr>
+            <td><img src="img/img.png" alt="naruto" height="200px"></td>
+            <td>
+                <h1>Uzumaki Naruto</h1>
+                <p><em>Hokage</em> at <strong> <a href="https://naruto.fandom.com/wiki/Konohagakure">Konoha</a>
+                    </strong></p>
+                <p>Jack of all Trades,Master of None. </p>
+            </td>
+        </tr>
+    </table>
 
 
+    <hr size="3" noshade>
+    <!--instead of using <b> tag we use <strong> tag
+        similar instead of using <i> tag we can use <em> tag-->
+    <h3><strong>Hobbies</strong></h3>
+    <ul>
+        <li>Eating Ramen</li>
+        <li>Pulling Pranks</li>
+        <li>Listen Lo-Fi Songs and Anime OST's ❣ ❣</li>
+    </ul>
+    <!-- HTML Lists :-- 1> Ordered Lists 2> Unordered Lists-->
+    <hr size="3" noshade>
+    <h3><strong>Education Qualification</strong></h3>
+    <table cellspacing="8px" cellpadding="5">
+        <tr>
+            <td>Year</td>
+            <td>Course</td>
+            <td>Institute</td>
+        </tr>
+        <tr>
+            <td>2010</td>
+            <td>Basic Ninjustsu</td>
+            <td>Ninja Academy</td>
+        </tr>
+        <tr>
+            <td>2014</td>
+            <td>Advance Ninjutsu</td>
+            <td>Legend Jiraya Academy</td>
+        </tr>
+        <tr>
+            <td>2016</td>
+            <td>Sage Jutsu</td>
+            <td>Mount Myoboku Academy</td>
+        </tr>
 
-  <br>
-  <hr>
-  <h3>Academic Qualifications</h3>
-  <table cellspacing="5px">
-    <thead>
-      <td><strong>Year</strong></td>
-      <td><strong>Course</strong></td>
-      <td><strong>Institute</strong></td>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2015-2016</td>
-        <td>Matriculation</td>
-        <td><a href="https://mis.rahul.ac.in">Manisha International School</a></td>
-      </tr>
-      <tr>
-        <td>2016-2018</td>
-        <td>Intermediate</td>
-        <td><a href="http://bokaropublicschool.org/">Bokaro Public School</a></td>
-      </tr>
-      <tr>
-        <td>2019-2022</td>
-        <td>Undergraduate</td>
-        <td><a href="https://www.bitmesra.ac.in/">Birla Institute Of Technology,Mesra</a></td>
-      </tr>
-      <tr>
-        <td>2022-2024</td>
-        <td>Post Graduate</td>
-        <td><a href="https://www.vitbhopal.ac.in/">Vellore Institute of Technology,Bhopal</a></td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-  <table cellspacing="">
-    <tbody>
-      <tr>
-        <td>HTML</td>
-        <td>⭐️⭐️⭐️⭐️⭐️</td>
-      </tr>
-      <tr>
-        <td>CSS</td>
-        <td>⭐️⭐️⭐️⭐️</td>
-      </tr>
-      <tr>
-        <td>JavaScript</td>
-        <td>⭐️⭐️⭐️</td>
-      </tr>
-      <tr>
-        <td>C</td>
-        <td>⭐️⭐️⭐️⭐️</td>
-      </tr>
-      <tr>
-        <td>JAVA</td>
-        <td>⭐️⭐️⭐️⭐️</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <a class="contact" href="contact-me.html">Contact Me</a>
+    </table>
+    <hr size="3" noshade>
+    <h2 align="center">Never give up in life and whatever you want to achieve will not come to you, you have to work your way through. It would be very tough road ahead but make that road fun, make a few friends and smile the way through it.</h2>
 
 </body>
+
 </html>
